--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,16 @@ a:hover {
   color: tomato;
   border-bottom: 2px solid tomato;
 }
+
+
+/* if you are looking at this, ignore the below for right now */
+
+
+body.interior {
+  background-color: whitesmoke;
+  color: #181818;
+  font-family: 'DM Sans', sans-serif;
+}
 main.exercise {
   text-align: center;
   max-width: 1440px;
@@ -48,4 +58,28 @@ main.exercise hr {
 }
 main.exercise > h2, h3, h4, h5, h6, ol, ul, li, p {
   text-align: left;
+}
+main.exercise h1 {
+  margin: 50px 0 100px;
+}
+h2 {
+  font-size: 2rem;
+  margin: 25px 0 0 0;
+  font-family: lavigne-display, sans-serif;
+}
+h3 {
+  font-family: lavigne-display, sans-serif;
+  margin: 50px 0 25px;
+}
+p {
+  margin: 10px 0;
+}
+main.exercise a:link, main.exercise a:visited, main.exercise a:active  {
+  color: #181818;
+  text-decoration: none;
+  border-bottom: 2px solid #181818;
+}
+main.exercise a:hover {
+  color: tomato;
+  border-bottom: 2px solid tomato;
 }
