--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ li {
 a:link, a:visited, a:active  {
   color: whitesmoke;
   text-decoration: none;
-  border-bottom: 2px solid #181818;
+  border-bottom: 2px solid tomato;
 }
 a:hover {
   color: tomato;
