--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+/********** general styles **********/
+
 * {
   margin: 0;
   padding: 0;
@@ -11,13 +13,44 @@ body {
   color: whitesmoke;
   font-family: 'DM Sans', sans-serif;
 }
+
+/********** layout styles **********/
+
+header {
+  width: 75vw;
+  margin: 25px auto;
+  padding: 25px;
+}
+
+main {
+  width: 75vw;
+  margin: 25px auto;
+  display: flow-root;
+}
+
+.col {
+  width: 50%;
+  float: left;
+  padding: 0 25px;
+}
+
+/********** type styles **********/
+
 h1 {
-  margin: 50px 0 0 50px;;
   font-family: lavigne-display, sans-serif;
   font-size: 5rem;
 }
-ul {
-  margin: 25px 0 0 50px;
+h2 {
+  font-family: lavigne-display, sans-serif;
+  font-size: 2rem;
+  margin: 0 0 25px 0;
+}
+h3 {
+  font-family: lavigne-display, sans-serif;
+  margin: 0 0 50px 0;
+}
+p {
+  margin: 10px 0;
 }
 li {
   list-style-type: none;
@@ -26,6 +59,9 @@ li {
   font-weight: 700;
   letter-spacing: 1px;
 }
+
+/********** link styles **********/
+
 a:link, a:visited, a:active  {
   color: whitesmoke;
   text-decoration: none;
@@ -61,18 +97,6 @@ main.exercise > h2, h3, h4, h5, h6, ol, ul, li, p {
 }
 main.exercise h1 {
   margin: 50px 0 100px;
-}
-h2 {
-  font-size: 2rem;
-  margin: 25px 0 0 0;
-  font-family: lavigne-display, sans-serif;
-}
-h3 {
-  font-family: lavigne-display, sans-serif;
-  margin: 50px 0 25px;
-}
-p {
-  margin: 10px 0;
 }
 main.exercise a:link, main.exercise a:visited, main.exercise a:active  {
   color: #181818;
