--- a/e9/css/main.css
+++ b/e9/css/main.css
@@ -55,6 +55,7 @@ body {
 #blog header, #blog main {
   width: 50vw;
   margin: 15px auto;
+  display: flow-root;
 }
 #blog header {
   height: 100px;
